# uuid

./: CMakeLists.txt  README.rst  spkg-install  uuid.pc.in
src/: CMakeLists.txt
